# winxterm

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  RELEASE_AUDIT.md  THIRD_PARTY_NOTICES.md  build-fast-release.sh  build-windows-binaries-on-linux.sh  wine-x11.sh  winebug.txt  winerun.sh
.github/workflows/: windows-build.yml
dependencies/sqlite3/: README.md
resources/: ASSETS.md  resource.h  winxterm.rc  winxterm_font_6x13.h
src/: dstshell_main.c  main.c  winxterm_app.c  winxterm_app.h  winxterm_bridge.c  winxterm_bridge.h  winxterm_client.c  winxterm_client.h  winxterm_clipboard.c  winxterm_clipboard.h  winxterm_diagnostics.h  winxterm_frame_scheduler.c  winxterm_frame_scheduler.h  winxterm_glyph_fallback.cpp  winxterm_glyph_fallback.h  winxterm_host.c  winxterm_host.h  winxterm_host_dispatch.h  winxterm_input.c  winxterm_input.h  winxterm_job_channel.c  winxterm_job_channel.h  winxterm_job_coordinator.c  winxterm_job_coordinator.h  winxterm_job_dispatch.c  winxterm_job_journal.c  winxterm_job_journal.h  winxterm_job_manager.c  winxterm_job_manager.h  winxterm_job_plan.c  winxterm_job_plan.h  winxterm_job_protocol.c  winxterm_job_protocol.h  winxterm_log.c  winxterm_log.h  winxterm_macro.c  winxterm_macro.h  winxterm_managed_runtime.c  winxterm_managed_runtime.h  winxterm_modes.c  (+33 more)
src/dstcmd/: dispatch.c  dispatch.h  winxterm_dstcmd.c  winxterm_dstcmd.h  winxterm_dstcmd_dircache.c  winxterm_dstcmd_exec.c  winxterm_dstcmd_exec.h  winxterm_dstcmd_host.c  winxterm_dstcmd_host.h  winxterm_dstcmd_job_client.c  winxterm_dstcmd_job_client.h  winxterm_dstcmd_jobs.c  winxterm_dstcmd_jobs.h  winxterm_dstcmd_parse.c  winxterm_dstcmd_parse.h  winxterm_dstcmd_selector.c  winxterm_dstcmd_selector.h
src/dstcmd/api/: command.h  env.c  env.h  path.c  path.h  scratch.c  scratch.h  unicode.c  unicode.h
src/dstcmd/commands/: alias.c  alias.h  cat.c  cat.h  cd.c  cd.h  cp.c  cp.h  echo.c  echo.h  export.c  export.h  help.c  help.h  highlight.c  highlight.h  job.c  job.h  ls.c  ls.h  mv.c  mv.h  playmacro.c  playmacro.h  pwd.c  pwd.h  rm.c  rm.h  set.c  set.h  which.c  which.h
tools/: dstshell_mode_mutator.c  pcf_to_header.c  xpm_to_ico.py
tools/integration/: ctrl-l-text.macro  ctrl-r-ls-history.macro  playmacro-inline-bootstrap.macro  run-wine-editor-macros.sh  run-wine-stdio-shim-external.sh  run-wine-wrapping-overlay.sh  stdio-shim-external.macro  stdio-shim-root-cmd.macro  wrapping-overlay.macro
